--- a/views/cities.phtml
+++ b/views/cities.phtml
@@ -43,25 +43,22 @@
     <div class="container" style="    min-width: 70%;">
         <div class="row row-50 justify-content-center justify-content-lg-between container-mrgin about2">
             <div class="col-8 animated zoomIn" id="about">
-                <h3> Parę słów o nas </h3>
-                <p><img src="../web/img/Logo.png" alt="OutSourcing IT" height="100" width="190"
-                        style="float:left; margin:0.4rem"> już<b> od 7 lat specjalizuje się w kompleksowym wsparciu
-                        informatycznym przedsiębiorstw.</b> Naszym przesłaniem jest całościowe podejście
-                    do oczekiwań i zadań stawianych nam przez naszych Klientów.</p>
-                <p> Zapewniamy przedsiębiorstwom pełną<b> opiekę informatyczną realizowaną w modelu outsourcingowym.</b>
-                    Naszym celem jest zabezpieczenie ciągłości pracy oraz bezpieczeństwa systemów informatycznych
-                    Klienta.</p>
-                <p> Jako firma informatyczna świadczymy również profesjonalne wsparcie w zakresie rozwiązań systemowych
-                    dla biznesu.
-                    <b> Specjalizujemy się w projektowaniu i wdrażaniu systemów informatycznych na indywidualne
-                        zamówienie Klienta.</b> W tym celu stworzyliśmy autorską platformę Prelude BPM®, która jest
-                    niezawodnym narzędziem pozwalającym na modelowanie
-                    dowolnych procesów zachodzących w organizacji.</p>
-                <p> MOSPAN zajmuje się ponadto
-                    <b> dostawą profesjonalnego sprzętu IT.</b> W tym celu współpracujemy z czołowymi producentami
-                    komputerów, podzespołów, urządzeń peryferyjnych oraz infrastruktury sieciowej.
-                    <b> Jesteśmy m.in. wyłącznym dystrybutorem na Polskę firmy ICY DOCK®</b> – renomowanego producenta
-                    urządzeń pamięci masowych i archiwizacji danych. </p>
+              <div style="padding-bottom: 30px">
+                  <h1>SPRAWDŹ GDZIE DZIAŁAMY</h1>
+              </div>
+                <img src="../web/img/mapa.jpg" alt="OutSourcing IT" height="300" width="400"
+                     style="float:right; margin:0.4rem">
+
+                <h2>Zapewniamy usługi informatyczne dla firm w następujących miastach: (klikane guziki)</h2>
+                <ul>
+                    <li><a href="dabrowagornicza">- Outsourcing IT Dąbrowa Górnicza</a></li>
+                    <li><a href="katowice">- Outsourcing IT Katowice</a></li>
+                    <li><a href="gliwice">- Outsourcing IT Gliwice</a></li>
+                    <li><a href="jaworzno">- Outsourcing IT Jaworzno</a></li>
+                    <li><a href="bedzin"> - Outsourcing IT Będzin</a></li>
+                    <li>- wszystkie inne miasta w promieniu do 40km od Dąbrowy Górniczej gdzie znajduje się
+                            nasza siedziba.</li>
+                </ul>
             </div>
             <div class="col-4">
                 <div class="text-box">
