--- a/views/dabrowagornicza.phtml
+++ b/views/dabrowagornicza.phtml
@@ -1,3 +1,14 @@
+<style>.tick-ul ul {
+        list-style: none;
+    }
+
+    .tick-ul ul li:before {
+        color: red;
+        font-weight: bolder;
+        content: '✓';
+        padding-right: 5px;
+    }</style>
+
 <button id="back-to-top" title="Go to top"><i class="fas fa-angle-up"></i></button>
 
 <header class=" dotted">
@@ -42,26 +53,16 @@
 <div class="content-box-white" id="section1">
     <div class="container" style="    min-width: 70%;">
         <div class="row row-50 justify-content-center justify-content-lg-between container-mrgin about2">
-            <div class="col-8 animated zoomIn" id="about">
-                <h3> Parę słów o nas </h3>
-                <p><img src="../web/img/Logo.png" alt="OutSourcing IT" height="100" width="190"
-                        style="float:left; margin:0.4rem"> już<b> od 7 lat specjalizuje się w kompleksowym wsparciu
-                        informatycznym przedsiębiorstw.</b> Naszym przesłaniem jest całościowe podejście
-                    do oczekiwań i zadań stawianych nam przez naszych Klientów.</p>
-                <p> Zapewniamy przedsiębiorstwom pełną<b> opiekę informatyczną realizowaną w modelu outsourcingowym.</b>
-                    Naszym celem jest zabezpieczenie ciągłości pracy oraz bezpieczeństwa systemów informatycznych
-                    Klienta.</p>
-                <p> Jako firma informatyczna świadczymy również profesjonalne wsparcie w zakresie rozwiązań systemowych
-                    dla biznesu.
-                    <b> Specjalizujemy się w projektowaniu i wdrażaniu systemów informatycznych na indywidualne
-                        zamówienie Klienta.</b> W tym celu stworzyliśmy autorską platformę Prelude BPM®, która jest
-                    niezawodnym narzędziem pozwalającym na modelowanie
-                    dowolnych procesów zachodzących w organizacji.</p>
-                <p> MOSPAN zajmuje się ponadto
-                    <b> dostawą profesjonalnego sprzętu IT.</b> W tym celu współpracujemy z czołowymi producentami
-                    komputerów, podzespołów, urządzeń peryferyjnych oraz infrastruktury sieciowej.
-                    <b> Jesteśmy m.in. wyłącznym dystrybutorem na Polskę firmy ICY DOCK®</b> – renomowanego producenta
-                    urządzeń pamięci masowych i archiwizacji danych. </p>
+            <div class="col-8 animated zoomIn tick-ul" id="about" style="text-align: justify;">
+                <h1> Dąbrowa Górnicza </h1>
+            <p>
+                Prowadzenie nowoczesnej firmy w dużej mierze opiera się oczywiście na sprzęcie komputerowym jaki w takich firmach się wykorzystuje. Wszelkie problemy techniczne jakie mogą się pojawić ze sprzętem mogą powodować utrudnienia w prowadzeniu działalności albo całkowicie to uniemożliwiać. Aby takiej sytuacji uniknąć będzie trzeba mieć sprawną obsługę IT w firmie. Wybór może paść na firmę VeriCom, która oferuje usługi informatyczne dla firm w Dąbrowie Górniczej. To świetna propozycja, ponieważ nie trzeba tworzyć stałego stanowiska pracy w firmie o tym charakterze, tylko będzie można korzystać z zewnętrznej firmy, gdy taka potrzeba będzie się pojawiała.
+            </p>
+                <h2>Wybór profesjonalnej oferty outsourcingu IT Dąbrowa Górnicza</h2>
+                <p>
+                    Wybierając outosurcing IT w Dąbrowie Górniczej bez obaw można się decydować na ofertę przygotowaną przez firmę VeriCom. Duże doświadczenie w tym zakresie oraz świetne grono specjalistów znających się na sprzęcie komputerowym to gwarancja profesjonalnej realizacji usług w zakresie IT dla firm niezależnie od tego z jakim problemem będzie trzeba się zmagać.
+                </p>
+               <?php include("city-common.phtml"); ?>
             </div>
             <div class="col-4">
                 <div class="text-box">
@@ -96,4 +97,3 @@
         </div>
     </div>
 </div>
-
