--- a/views/home.phtml
+++ b/views/home.phtml
@@ -1,5 +1,4 @@
 <button id="back-to-top" title="Go to top"><i class="fas fa-angle-up"></i></button>
-
 <header class=" dotted">
     <div class="full-box header-bacground-image1 animated fadeInSlider headers">
         <button class="arrow arrow-left" onclick="plusDivs(-1)">&#10094;</button>
@@ -38,25 +37,68 @@
         </div>
     </div>
 </header>
-
+<!--<div class="content-box-grey">-->
+<!--    <div class="container">-->
+<!--        <div class="row row-50 justify-content-center justify-content-lg-between container-margin">-->
+<!--            <div class="col-md-12 col-lg-12 col-xs-12 animated zoomIn" id="about">-->
+<!--                <img src="web/img/stres.jpg" alt="OutSourcing IT" height="350" width="430"-->
+<!--                     style="float:left; margin:0.4rem">-->
+<!--                <p style="    color: #d91d15;-->
+<!--    font-weight: bolder;-->
+<!--    letter-spacing: 0.5px;"> Masz już dosyć stresów i zastojów w pracy spowodowanych awaryjnością sprzętu w Twojej-->
+<!--                    firmie?-->
+<!--                    Jeśli tak, to znalazłeś się we właściwym miejscu!-->
+<!--                </p>-->
+<!--            </div>-->
+<!---->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 <div class="content-box-white" id="section1">
     <div class="container">
         <div class="row row-50 justify-content-center justify-content-lg-between container-margin">
-            <div class="col-md-6 col-lg-6 col-xs-6 animated zoomIn" id="about">
-                <h3> O NAS </h3>
-                <p><img src="application/web/img/Logo.png" alt="OutSourcing IT" height="80" width="150"
-                        style="float:left; margin:0.4rem"> już<b> od 7 lat specjalizuje się w kompleksowym
-                        wsparciu informatycznym przedsiębiorstw.</b> Naszym przesłaniem jest całościowe
-                    podejście
-                    do oczekiwań i zadań stawianych nam przez naszych Klientów.</p>
-                <p> Zapewniamy przedsiębiorstwom pełną<b> opiekę informatyczną realizowaną w modelu
-                        outsourcingowym.</b> Naszym celem jest zabezpieczenie ciągłości pracy oraz
-                    bezpieczeństwa
-                    systemów informatycznych Klienta.</p>
+            <div class=" col-md-6 col-lg-6 col-xs-6 animated fadeInLeft" id="about">
+                <h1>OUTSOURCING IT W TWOJEJ FIRMIE</h1>
+                <p>Masz już dosyć stresów i zastojów w pracy spowodowanych awaryjnością sprzętu w Twojej firmie?
+                    Jeśli tak,<b> to znalazłeś się we właściwym miejscu!</b>
+                    <span> Pomagamy ludziom takim jak Ty od roku XXXX </span>
+                </p>
+                <img src="web/img/question.jpg" alt="OutSourcing IT" height="140" width="200"
+                     style="float:left; margin:0.4rem 0.6rem 0rem 0rem">
+                <p>
+                <ul class="hidden-to-animate" style="font-weight: bolder;" >
+                    <li class="animated fadeIn"><i class="fas fa-question" style="color: rgb(217, 29, 21);margin-right:5px;
+                    animation-delay: 2s"></i>Brak internetu
+                    </li>
+                    <li class="animated fadeIn"><i class="fas fa-question" style="color: rgb(217, 29, 21);
+                    margin-right: 5px;"></i>Migający monitor
+                    </li>
+                    <li class="animated fadeIn"><i class="fas fa-question" style="color: rgb(217, 29,
+                    21); margin-right: 5px;"></i>Wyłączający się komputer
+                    </li>
+                    <li class="animated fadeIn"><i class="fas fa-question" style="color: rgb(217, 29,
+                    21); margin-right: 5px;"></i>Brak możliwości połączenia się z serwerem
+                    </li>
+                    <li  class="animated fadeIn"><i class="fas fa-question" style="color: rgb(217, 29, 21);
+                    margin-right: 5px;">
+                        </i>Nie działające kamery
+                    </li>
+                    <li class="animated fadeIn"><i class="fas fa-question" style="color: rgb(217, 29, 21);
+                    margin-right: 5px;"></i>Notoryczne błędy
+                    </li>
+                </ul>
+                <p style="padding-top: 10px;"><b>To tylko przykładowe sytuacje, które zdarzają się w przedsiębiorstwach każdego dnia.</b>
+                Naprawa awarii pochłania zawsze dużą
+                ilość czasu, angażuje wiele osób oraz wywołuje nieraz niemałe zamieszanie. A jak wiemy czas to
+                pieniądz.
+
+                Dobrze być na to przygotowanym i powierzyć opiekę nad „złośliwością rzeczy martwych” specjalistom z
+                wieloletnim doświadczeniem. Jesteśmy tu dla Ciebie.
+                </p>
             </div>
             <div class="col-md-6 col-lg-6 col-xs-6">
                 <div>
-                    <div id="example-1" style="margin-top: 1%;">
+                    <div id="example-1" style="margin-top: 10%;">
                         <div class="bar cssProgress">
                             <div class="progress1">
                                 <p>Zadowolonych Klientów</p>
@@ -93,6 +135,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 <div class="content-box-grey">
@@ -125,10 +168,9 @@
             <div class="col what-we-do" style="    animation-delay: 800ms;">
                 <div class="icon scheme"></div>
                 <h1>
-                    <a href=""> OBUDOWY I KIESZENIE ICY DOCK </a>
+                    <a href=""> PROJEKTOWANIE I BUDOWA SIECI KOMPUTEROWEJ</a>
                 </h1>
-                <p style="padding-top: 1.2rem;">Jesteśmy wyłącznym dystrybutorem w Polsce Urządzeń Pamięci
-                    Masowych i Archiwizacji Danych</P>
+                <p style="padding-top: 1.2rem;">Wykonujemy: sieci komputerowe LAN i WiFi, instalacje elektryczne, monitoring CCTV IP</P>
             </div>
             <div class="col what-we-do" style="    animation-delay: 1200ms;">
                 <div class="icon settings">
