--- a/views/menu.phtml
+++ b/views/menu.phtml
@@ -11,7 +11,7 @@
         </div>
         <div class="menu-normal" id="top-menu">
             <ul class="">
-                <ul><?php nav_menu(); ?></ul>
+                <ul><?php nav_menu('nav_menu'); ?></ul>
             </ul>
         </div>
     </div>
