--- a/views/service.phtml
+++ b/views/service.phtml
@@ -1,5 +1,14 @@
-<button id="back-to-top" title="Go to top"><i class="fas fa-angle-up"></i></button>
+<style>.tick-ul ul {
+        list-style: none;
+    }
 
+    .tick-ul ul li:before {
+        color: red;
+        font-weight: bolder;
+        content: '✓';
+        padding-right: 5px;
+    }</style>
+<button id="back-to-top" title="Go to top"><i class="fas fa-angle-up"></i></button>
 <header class=" dotted">
     <div class="full-box header-bacground-image1 animated fadeInSlider headers">
         <button class="arrow arrow-left" onclick="plusDivs(-1)">&#10094;</button>
