--- a/layout/layout.phtml
+++ b/layout/layout.phtml
@@ -22,6 +22,7 @@
     <section class="container-fluid">
         <?php include 'views/menu.phtml'; ?>
         <?php page_content(); ?>
+        <?php custom_link("dada",'dasdsa'); ?>
         <?php include 'views/footer.phtml'; ?>
     </section>
 </main>
