--- a/views/jaworzno.phtml
+++ b/views/jaworzno.phtml
@@ -1,3 +1,14 @@
+<style>.tick-ul ul {
+        list-style: none;
+    }
+
+    .tick-ul ul li:before {
+        color: red;
+        font-weight: bolder;
+        content: '✓';
+        padding-right: 5px;
+    }</style>
+
 <button id="back-to-top" title="Go to top"><i class="fas fa-angle-up"></i></button>
 
 <header class=" dotted">
@@ -42,26 +53,16 @@
 <div class="content-box-white" id="section1">
     <div class="container" style="    min-width: 70%;">
         <div class="row row-50 justify-content-center justify-content-lg-between container-mrgin about2">
-            <div class="col-8 animated zoomIn" id="about">
-                <h3> Parę słów o nas </h3>
-                <p><img src="../web/img/Logo.png" alt="OutSourcing IT" height="100" width="190"
-                        style="float:left; margin:0.4rem"> już<b> od 7 lat specjalizuje się w kompleksowym wsparciu
-                        informatycznym przedsiębiorstw.</b> Naszym przesłaniem jest całościowe podejście
-                    do oczekiwań i zadań stawianych nam przez naszych Klientów.</p>
-                <p> Zapewniamy przedsiębiorstwom pełną<b> opiekę informatyczną realizowaną w modelu outsourcingowym.</b>
-                    Naszym celem jest zabezpieczenie ciągłości pracy oraz bezpieczeństwa systemów informatycznych
-                    Klienta.</p>
-                <p> Jako firma informatyczna świadczymy również profesjonalne wsparcie w zakresie rozwiązań systemowych
-                    dla biznesu.
-                    <b> Specjalizujemy się w projektowaniu i wdrażaniu systemów informatycznych na indywidualne
-                        zamówienie Klienta.</b> W tym celu stworzyliśmy autorską platformę Prelude BPM®, która jest
-                    niezawodnym narzędziem pozwalającym na modelowanie
-                    dowolnych procesów zachodzących w organizacji.</p>
-                <p> MOSPAN zajmuje się ponadto
-                    <b> dostawą profesjonalnego sprzętu IT.</b> W tym celu współpracujemy z czołowymi producentami
-                    komputerów, podzespołów, urządzeń peryferyjnych oraz infrastruktury sieciowej.
-                    <b> Jesteśmy m.in. wyłącznym dystrybutorem na Polskę firmy ICY DOCK®</b> – renomowanego producenta
-                    urządzeń pamięci masowych i archiwizacji danych. </p>
+            <div class="col-8 animated zoomIn tick-ul" id="about" style="text-align: justify;">
+                <h1> Katowice </h1>
+            <p>
+                Większość firm obecnie swoją codzienną pracę opiera na nowoczesnym sprzęcie komputerowym. Jednak trzeba się liczyć z tym, że nadal są to jednak urządzenia, które mogą ulegać awarii. Dlatego warto zadbać między innymi o stworzenie takich warunków, w których będzie można mieć stałą kontrole nad tymi urządzeniami i ich technicznym stanem. Jeśli firma nie chce tworzyć kompleksowo działu informatycznego warto będzie wykorzystać usługi informatyczne dla firm w Katowicach świadczone przez zewnętrzne podmioty.
+            </p>
+                <h2>Profesjonalny outsourcing IT w Katowicach</h2>
+                <p>
+                    Obecnie możemy liczyć na profesjonalny outsourcing IT w Katowicach, który będzie realizowany przez doświadczone firmy, które mają odpowiednie w tym zakresie przygotowanie i są w stanie kompleksowo zająć się sprzętem komputerowym jaki w firmie funkcjonuje. Obsługa informatyczna dla firm przez zewnętrzne podmioty to bardzo duża wygoda, ponieważ przy nawiązaniu stałej współpracy można liczyć na pomoc takich firm, a jednocześnie nie będzie obaw o wysokie koszty, które pojawiłyby się, gdyby ktoś w tym temacie została zatrudniony w firmie na etat.
+                </p>
+               <?php include("city-common.phtml"); ?>
             </div>
             <div class="col-4">
                 <div class="text-box">
@@ -96,4 +97,3 @@
         </div>
     </div>
 </div>
-
